# eye-pi

./: .gitignore  CMakeLists.txt  LICENSE  README.md  index.js  main.cpp  package-lock.json  package.json
Camera/: CameraStreamer.cpp
MotionDetection/: MotionDetector.cpp  MotionDetector.hpp  MotionFrame.hpp
client/: Mainfiest.mpd  index.html  style.css
img/: raspberry_pi1600.psd
native/: main.cpp  test.cpp
native/Camera/: CameraStreamer.hpp
native/MotionDetection/: MotionFrame.cpp
native/Utility/: base64.cpp
